--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<!-- <mat-card> -->
-<ag-grid-angular style="width: 100%; height: 100%;" class="ag-theme-balham" [rowData]="rowData"
-  [columnDefs]="columnDefs">
-</ag-grid-angular>
-<!-- </mat-card> -->
+<div class="p-2">
+  <span class = 'page-title'>Dashboard </span>
+  <ag-grid-angular style="width: 100%; height: 500px;"
+  [gridOptions] = 'gridOptions' class="ag-theme-balham" [rowData]="rowData"
+    [columnDefs]="columnDefs">
+  </ag-grid-angular>
+</div>
