--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,15 @@ mat-toolbar {
     // font-weight: bold;
     color: rgb(209, 209, 151);
   }
+  min-width: 150px;
+}
+
+.page-title {
+  color: $background-color;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .margin-top5 {
@@ -103,7 +112,7 @@ mat-toolbar {
 @media only screen and (min-width: 576px) {
   .grid-style {
     display: grid;
-    grid-template-columns: 0% 100% 0%;
+    grid-template-columns: 1% 98% 1%;
   }
 }
 
