--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -23,7 +23,7 @@ Documents upload
 <div class="grid-style">
   <div></div>
   <div>
-    <span class = 'page-header'> Create New User </span>
+    <span class = 'page-title'> Create New User </span>
     <mat-card >
       <form [formGroup]="UserForm" class="form">
         <div class="flexcolumn">
