--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 @import "~@angular/cdk/overlay-prebuilt.css";
 @import "./variables.scss";
+@import "./ag-grid-overrides.scss";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
@@ -140,3 +141,6 @@ mat-toolbar {
     grid-template-columns: 25% 50% 25%;
   }
 }
+
+
+
