--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,10 @@ mat-toolbar {
   flex: 0.3 !important;
 }
 
+.flex07{
+  flex: 0.7 !important;
+}
+
 .flexrow {
   display: flex;
   flex-direction: row;
@@ -77,6 +81,10 @@ mat-toolbar {
 }
 .padding-top {
   padding-top: 10px !important;
+}
+
+.padding10{
+  padding: 10px !important;
 }
 
 .app-button {
